# -------------------------------------------------------
# util cmake build script for sgffabric.
# Written by: Salvatore
# Modified by: Salvatore
# -------------------------------------------------------

# -------------------------------------------------------
# Source directories containing all the necessary .cpp files
# -------------------------------------------------------
set(ENVIRONMENT_DIR ${CMAKE_SOURCE_DIR}/Source/environment)
set(ENVIRONMENT_SRC
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp)

# -------------------------------------------------------
# Include directory
# -------------------------------------------------------

# -------------------------------------------------------
# module
# -------------------------------------------------------
#add_library (environment_module ${ENVIRONMENT_SRC})
