# -------------------------------------------------------
# util cmake build script for sgffabric.
# Written by: Salvatore
# Modified by: Salvatore
# -------------------------------------------------------

# -------------------------------------------------------
# Source directories containing all the necessary .cpp files
# -------------------------------------------------------
set(GEOMETRY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Source/geometry)
set(GEOMETRY_SRC
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp
SGF_.cpp)

# -------------------------------------------------------
# Include directory
# -------------------------------------------------------

# -------------------------------------------------------
# module
# -------------------------------------------------------
#add_library (sgf_geometry_module ${GEOMETRY_SRC})
